--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apicache": "^1.6.3",
     "better-sqlite3": "^9.4.0",
     "express": "^4.18.2",
     "gtfs-realtime-bindings": "^1.1.1",
+    "luxon": "^3.4.4",
     "node-fetch": "^3.3.2",
     "papaparse": "^5.4.1"
   },
