--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "runtimeVersion": "20.11.0",
+            //"runtimeVersion": "20.11.0",
             "skipFiles": [
                 "<node_internals>/**"
             ],
