--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "apicache": "^1.6.3",
     "better-sqlite3": "^9.4.0",
     "express": "^4.18.2",
